# rag-development-test

./: .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
app/: config.py  init_vectordb.py  main.py  ollama_service.py  vector_store.py
